# Cinetica

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCS.md  README.md  lint.py  mypy.ini  pyproject.toml  requirements-dev.txt  test_optimization.py
.github/: dependabot.yml
.github/workflows/: ci.yml  python-ci.yml
.windsurf/: rules.md
benchmarks/: benchmark_mruv.py
cinetica/: __init__.py  config.py  exceptions.py  logger.py  movimiento_base.py  movimiento_circular.py  movimiento_parabolico.py  movimiento_rectilineo.py  units.py
cinetica/cinematica/: __init__.py  base_movimiento.py
cinetica/cinematica/circular/: __init__.py  mcuv.py  movimiento_circular_uniforme.py  movimiento_circular_uniformemente_variado.py
cinetica/cinematica/espacial/: __init__.py  movimiento_espacial.py
cinetica/cinematica/graficos/: graficador.py
cinetica/cinematica/oscilatorio/: __init__.py  movimiento_armonico_complejo.py  movimiento_armonico_simple.py
cinetica/cinematica/parabolico/: analisis.py  base.py
cinetica/cinematica/rectilineo/: __init__.py  movimiento_rectilineo_uniforme.py  movimiento_rectilineo_uniformemente_variado.py
cinetica/circular/: __init__.py  mcu.py  mcuv.py
cinetica/dinamica/: __init__.py  fuerzas.py  newton.py  trabajo_energia.py
cinetica/espacial/: __init__.py  movimiento_espacial.py
cinetica/graficos/: __init__.py  graficador.py
cinetica/oscilatorio/: __init__.py  mac.py  mas.py
cinetica/parabolico/: __init__.py  analisis.py  base.py
cinetica/rectilineo/: __init__.py  mru.py  mruv.py
cinetica/relativo/: __init__.py  velocidad_relativa.py
docs/: api.rst  conf.py  desarrollo.rst  ejemplos.rst  make.bat  requirements.txt
docs/_build/html/: .buildinfo  (+11 more)
docs/api/: cinetica.graficos.rst  cinetica.rst  cinetica.unidades.rst
tests/: README.md  test_base_movimiento.py  test_cinetica.py  test_graficos.py  test_mcu_comprehensive.py  test_movimiento_armonico_complejo.py  test_movimiento_circular.py  test_movimiento_espacial.py  test_movimiento_oscilatorio.py  test_movimiento_parabolico.py  test_movimiento_rectilineo.py  test_movimiento_relativo.py  test_mruv_comprehensive.py  test_units_circular.py  test_units_mru.py  test_units_mruv.py  test_units_parabolico.py
tests/comprehensive/: test_mcu_comprehensive.py  test_mruv_comprehensive.py
tests/property/: test_mcu_properties.py  test_mru_properties.py  test_mruv_properties.py  test_spatial_properties.py
tests/unit/: test_cinetica.py  test_config.py
usage/: ejemplo_choques_colisiones.py  ejemplo_dinamica.py  ejemplo_dinamica_rotacional.py  ejemplo_logging.py  ejemplo_sistemas_particulas.py  ejemplo_unidades.py  mac.py  mas.py  mcu.py  mcuv.py  movimiento_armonico_complejo_ejemplo.py  movimiento_armonico_simple_ejemplo.py  movimiento_circular_uniforme_ejemplo.py  movimiento_circular_uniformemente_variado_ejemplo.py  movimiento_esp.py  movimiento_espacial_ejemplo.py  movimiento_rectilineo_uniforme_ejemplo.py  movimiento_rectilineo_uniformemente_variado_ejemplo.py  mp_base_analisis.py  mr.py  mru.py  mruv.py
(+53 files in other folders)
