[tool.poetry]
name = "cinetica"
version = "0.7.0"
description = "A Python library for physics modules."
authors = [
    { name = "Elabsurdo984", email = "matiassfernandez00@gmail.com" },
]
dependencies = {
    python = ">=3.8",
    numpy = ">=2.3.2",
    matplotlib = ">=3.10.5"
}
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["physics", "library", "science"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
packages = [{ include = "cinetica" }]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pylint = "^2.15"
black = "^23.0"
isort = "^5.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Source Code" = "https://github.com/Elabsurdo984/Cinetica"
"Bug Tracker" = "https://github.com/Elabsurdo984/Cinetica/issues"
